--- a/Project_TransferWise/ViewController/Main Tab View Controller/Invite View Controller/Invite friends View Controller/InviteFriendViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Invite View Controller/Invite friends View Controller/InviteFriendViewController.xib
@@ -22,25 +22,34 @@
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="ISK-K3-rRp" userLabel="Invite Via Email Button">
-                    <rect key="frame" x="20" y="442" width="374" height="49.333333333333314"/>
+                    <rect key="frame" x="20" y="440" width="374" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="Svp-Vp-0ss"/>
+                    </constraints>
                     <state key="normal" title="Invite via Email">
                         <color key="titleColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="gwb-8V-E4t" userLabel="Invite Via Sms Button">
-                    <rect key="frame" x="20" y="505.33333333333331" width="374" height="49.333333333333314"/>
+                    <rect key="frame" x="20" y="504" width="374" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="Fan-mz-I40"/>
+                    </constraints>
                     <state key="normal" title="Invite via SMS">
                         <color key="titleColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                 </button>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VLT-UH-uFk" userLabel="Copy Link Button">
-                    <rect key="frame" x="20" y="568.66666666666663" width="374" height="49.333333333333371"/>
+                    <rect key="frame" x="20" y="568" width="374" height="50"/>
+                    <constraints>
+                        <constraint firstAttribute="height" constant="50" id="G0l-16-i3c"/>
+                    </constraints>
                     <state key="normal" title="Copy my invite link">
                         <color key="titleColor" red="0.0" green="0.72549019607843135" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </state>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" usesAttributedText="YES" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="3tr-Wy-nFC">
-                    <rect key="frame" x="20" y="356.33333333333331" width="374" height="45.666666666666686"/>
+                    <rect key="frame" x="20" y="354.33333333333331" width="374" height="45.666666666666686"/>
                     <attributedString key="attributedText">
                         <fragment content="When 3 friends start using TransferWise, you'll get">
                             <attributes>
@@ -74,10 +83,10 @@
                     <nil key="highlightedColor"/>
                 </label>
                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="evro" translatesAutoresizingMaskIntoConstraints="NO" id="F44-Tz-dOl">
-                    <rect key="frame" x="145" y="246.66666666666666" width="124" height="73.666666666666657"/>
+                    <rect key="frame" x="145" y="244.66666666666666" width="124" height="73.666666666666657"/>
                 </imageView>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Invite your friends" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="NUY-zK-cXz">
-                    <rect key="frame" x="121.33333333333333" y="181.33333333333334" width="171.66666666666669" height="25.333333333333343"/>
+                    <rect key="frame" x="121.33333333333333" y="179.33333333333334" width="171.66666666666669" height="25.333333333333343"/>
                     <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
                     <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                     <nil key="highlightedColor"/>
@@ -96,13 +105,11 @@
                 <constraint firstItem="VLT-UH-uFk" firstAttribute="top" secondItem="gwb-8V-E4t" secondAttribute="bottom" constant="14" id="1U6-g7-goK"/>
                 <constraint firstItem="ISK-K3-rRp" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="2cw-PF-gEf"/>
                 <constraint firstItem="3tr-Wy-nFC" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="3ut-ai-PKG"/>
-                <constraint firstItem="gwb-8V-E4t" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.067" id="5Ue-lM-Rkt"/>
                 <constraint firstItem="gwb-8V-E4t" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="7FM-um-cDf"/>
                 <constraint firstItem="3tr-Wy-nFC" firstAttribute="trailing" relation="lessThanOrEqual" secondItem="fnl-2z-Ty3" secondAttribute="trailing" constant="20" id="7bB-ci-ndv"/>
                 <constraint firstItem="Vk9-xj-ANc" firstAttribute="top" secondItem="fnl-2z-Ty3" secondAttribute="top" constant="15" id="93r-tz-Xk1"/>
                 <constraint firstItem="VLT-UH-uFk" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="C0E-Mu-DB4"/>
                 <constraint firstItem="Vk9-xj-ANc" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" constant="20" id="Eau-s3-d6r"/>
-                <constraint firstItem="ISK-K3-rRp" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.067" id="EkO-Eh-fbT"/>
                 <constraint firstItem="Vk9-xj-ANc" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.0339674" id="HQI-vE-OzC"/>
                 <constraint firstItem="F44-Tz-dOl" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.1" id="N8J-mj-9YG"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="VLT-UH-uFk" secondAttribute="trailing" constant="20" id="SxU-bm-adT"/>
@@ -110,7 +117,6 @@
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="gwb-8V-E4t" secondAttribute="trailing" constant="20" id="Tv2-JV-Of7"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="ISK-K3-rRp" secondAttribute="trailing" constant="20" id="efB-3e-yxL"/>
                 <constraint firstItem="F44-Tz-dOl" firstAttribute="top" secondItem="NUY-zK-cXz" secondAttribute="bottom" constant="40" id="fBj-Lc-a4J"/>
-                <constraint firstItem="VLT-UH-uFk" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.067" id="hYf-oe-Gk2"/>
                 <constraint firstItem="VLT-UH-uFk" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="iK8-Bd-ycj"/>
                 <constraint firstItem="F44-Tz-dOl" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="oyO-ZH-Cmu"/>
                 <constraint firstItem="3tr-Wy-nFC" firstAttribute="centerX" secondItem="fnl-2z-Ty3" secondAttribute="centerX" id="rqP-7d-hkl"/>
