--- a/Project_TransferWise/ViewController/Main Tab View Controller/Send View Controller/SendScreenViewController.xib
+++ b/Project_TransferWise/ViewController/Main Tab View Controller/Send View Controller/SendScreenViewController.xib
@@ -80,16 +80,16 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="usa" translatesAutoresizingMaskIntoConstraints="NO" id="dHT-3Z-VMD">
-                            <rect key="frame" x="279" y="34" width="15" height="15"/>
+                            <rect key="frame" x="278.66666666666669" y="34.333333333333329" width="15" height="14.666666666666664"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GBP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="HUc-tS-eYj">
-                            <rect key="frame" x="305" y="29" width="42" height="25"/>
+                            <rect key="frame" x="305.33333333333331" y="29" width="42" height="25.333333333333329"/>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="down arrow" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="fDt-IN-DRg">
-                            <rect key="frame" x="359" y="34" width="15" height="15"/>
+                            <rect key="frame" x="359" y="34.333333333333329" width="15" height="14.666666666666664"/>
                         </imageView>
                     </subviews>
                     <constraints>
@@ -108,25 +108,26 @@
                         <constraint firstItem="fDt-IN-DRg" firstAttribute="centerY" secondItem="O0Y-Ut-6Uc" secondAttribute="centerY" id="TLg-QN-1CM"/>
                         <constraint firstAttribute="bottom" secondItem="O0Y-Ut-6Uc" secondAttribute="bottom" id="Tfp-Q0-mjo"/>
                         <constraint firstItem="HUc-tS-eYj" firstAttribute="centerY" secondItem="O0Y-Ut-6Uc" secondAttribute="centerY" id="bKR-lh-jtB"/>
+                        <constraint firstAttribute="height" constant="83.329999999999998" id="bND-s4-TCE"/>
                         <constraint firstItem="dHT-3Z-VMD" firstAttribute="leading" secondItem="O0Y-Ut-6Uc" secondAttribute="leading" constant="10" id="bPO-mp-DZm"/>
                         <constraint firstItem="HUc-tS-eYj" firstAttribute="centerX" secondItem="O0Y-Ut-6Uc" secondAttribute="centerX" id="tMV-lW-NyS"/>
                         <constraint firstAttribute="trailing" secondItem="O0Y-Ut-6Uc" secondAttribute="trailing" id="x6k-89-N6S"/>
                     </constraints>
                 </view>
                 <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qNk-6a-lpE" userLabel="Bottom View">
-                    <rect key="frame" x="15" y="263" width="384" height="132.33333333333337"/>
+                    <rect key="frame" x="15" y="261.33333333333331" width="384" height="134"/>
                     <subviews>
                         <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" spacing="6" translatesAutoresizingMaskIntoConstraints="NO" id="usO-Sg-In6">
-                            <rect key="frame" x="14.999999999999986" y="13.999999999999996" width="248.66666666666663" height="59.666666666666657"/>
+                            <rect key="frame" x="14.999999999999986" y="13.999999999999996" width="248.66666666666663" height="60.666666666666657"/>
                             <subviews>
-                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="You send exactly" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4T9-Td-5kl">
-                                    <rect key="frame" x="0.0" y="0.0" width="248.66666666666666" height="26.666666666666668"/>
+                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Recipient gets" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="4T9-Td-5kl">
+                                    <rect key="frame" x="0.0" y="0.0" width="248.66666666666666" height="27.333333333333332"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <color key="textColor" red="0.6588235294" green="0.66666666669999997" blue="0.67450980390000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
                                 </label>
                                 <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" text="1,000" textAlignment="natural" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="k1l-9I-2z7">
-                                    <rect key="frame" x="0.0" y="32.666666666666686" width="248.66666666666666" height="27"/>
+                                    <rect key="frame" x="0.0" y="33.333333333333371" width="248.66666666666666" height="27.333333333333329"/>
                                     <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                     <color key="textColor" red="0.2156862745" green="0.31764705879999999" blue="0.4941176471" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <fontDescription key="fontDescription" type="boldSystem" pointSize="25"/>
@@ -135,7 +136,7 @@
                             </subviews>
                         </stackView>
                         <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="jx3-Ka-HeG" userLabel="Bottom Button">
-                            <rect key="frame" x="268.66666666666669" y="0.0" width="115.33333333333331" height="87.666666666666671"/>
+                            <rect key="frame" x="268.66666666666669" y="0.0" width="115.33333333333331" height="88.666666666666671"/>
                             <color key="backgroundColor" red="0.2156862745" green="0.31764705879999999" blue="0.4941176471" alpha="1" colorSpace="calibratedRGB"/>
                             <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                             <state key="normal">
@@ -146,22 +147,22 @@
                             </connections>
                         </button>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="usa" translatesAutoresizingMaskIntoConstraints="NO" id="QL0-pd-9cW">
-                            <rect key="frame" x="278.66666666666669" y="35.333333333333314" width="15" height="17"/>
+                            <rect key="frame" x="278.66666666666669" y="35.666666666666686" width="15" height="17.666666666666671"/>
                         </imageView>
                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="GBP" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" minimumScaleFactor="0.5" translatesAutoresizingMaskIntoConstraints="NO" id="niL-Cf-YvK">
-                            <rect key="frame" x="305.33333333333331" y="31" width="42" height="25.333333333333329"/>
+                            <rect key="frame" x="305.33333333333331" y="31.666666666666686" width="42" height="25.333333333333329"/>
                             <fontDescription key="fontDescription" type="system" weight="semibold" pointSize="21"/>
                             <color key="textColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                             <nil key="highlightedColor"/>
                         </label>
                         <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="down arrow" adjustsImageSizeForAccessibilityContentSizeCategory="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Rz0-td-uuB">
-                            <rect key="frame" x="359" y="35.333333333333314" width="15" height="17"/>
+                            <rect key="frame" x="359" y="35.666666666666686" width="15" height="17.666666666666671"/>
                         </imageView>
                         <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="5R2-to-fM9" userLabel="Gray View">
-                            <rect key="frame" x="0.0" y="87" width="384" height="44"/>
+                            <rect key="frame" x="0.0" y="88.666666666666686" width="384" height="44.333333333333343"/>
                             <subviews>
                                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Type a value for the recipient to get an exact amount" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FCm-bA-mGd">
-                                    <rect key="frame" x="5" y="13.333333333333314" width="374" height="17"/>
+                                    <rect key="frame" x="5" y="13.666666666666686" width="374" height="17"/>
                                     <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                     <color key="textColor" red="0.6588235294117647" green="0.66666666666666663" blue="0.67450980392156867" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                     <nil key="highlightedColor"/>
@@ -178,6 +179,7 @@
                     </subviews>
                     <constraints>
                         <constraint firstItem="5R2-to-fM9" firstAttribute="top" secondItem="usO-Sg-In6" secondAttribute="bottom" constant="14" id="3Mu-2R-fu5"/>
+                        <constraint firstAttribute="height" constant="134" id="5Nf-RE-qJb"/>
                         <constraint firstItem="QL0-pd-9cW" firstAttribute="height" secondItem="jx3-Ka-HeG" secondAttribute="height" multiplier="0.48" constant="-25" id="8QJ-BP-YoM"/>
                         <constraint firstAttribute="trailing" secondItem="jx3-Ka-HeG" secondAttribute="trailing" id="9i6-0L-iqw"/>
                         <constraint firstItem="jx3-Ka-HeG" firstAttribute="width" secondItem="qNk-6a-lpE" secondAttribute="width" multiplier="0.3" id="JMa-US-ZqM"/>
@@ -253,13 +255,11 @@
                 <constraint firstItem="TsT-H9-3pB" firstAttribute="top" secondItem="O2M-wb-RRI" secondAttribute="bottom" constant="27" id="SZ4-NC-dh8"/>
                 <constraint firstItem="O2M-wb-RRI" firstAttribute="top" secondItem="qNk-6a-lpE" secondAttribute="bottom" constant="23" id="Vhk-rR-cEz"/>
                 <constraint firstItem="O2M-wb-RRI" firstAttribute="centerX" secondItem="i5M-Pr-FkT" secondAttribute="centerX" id="Xpc-cs-Jrh"/>
-                <constraint firstItem="qNk-6a-lpE" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.18" id="aWi-pc-oAu"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="qNk-6a-lpE" secondAttribute="trailing" constant="15" id="cTX-F9-NPE"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="bottom" secondItem="oip-YK-bLu" secondAttribute="bottom" id="d3h-pp-D7S"/>
                 <constraint firstItem="fnl-2z-Ty3" firstAttribute="trailing" secondItem="TsT-H9-3pB" secondAttribute="trailing" constant="20" id="e6J-aX-28I"/>
                 <constraint firstItem="oip-YK-bLu" firstAttribute="leading" secondItem="fnl-2z-Ty3" secondAttribute="leading" id="ges-6Y-Nah"/>
                 <constraint firstItem="yZQ-MW-lJP" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="15" id="kBH-Mw-EI3"/>
-                <constraint firstItem="yZQ-MW-lJP" firstAttribute="height" secondItem="i5M-Pr-FkT" secondAttribute="height" multiplier="0.113" id="kS5-jS-hyh"/>
                 <constraint firstAttribute="trailing" secondItem="yZQ-MW-lJP" secondAttribute="trailing" constant="15" id="vgJ-XX-yGn"/>
                 <constraint firstItem="yZQ-MW-lJP" firstAttribute="top" secondItem="0GD-8G-L5I" secondAttribute="bottom" constant="20" id="wkV-dI-kQK"/>
                 <constraint firstItem="0GD-8G-L5I" firstAttribute="leading" secondItem="i5M-Pr-FkT" secondAttribute="leading" constant="23" id="wuF-jB-rjW"/>
